# YSM-Kicad-MCP

./: .gitignore  .mcp.json  LICENSE  README.md  build.sh  kicad-context.mcpb  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
mcpb/: build.sh  entry.py  manifest.json
src/kicad_context_mcp/: __init__.py  budgets.py  kicad.py  model.py  server.py  sexpr.py
tests/: fetch_fixtures.sh  test_tools.py
tests/fixtures/: README.md
