[project]
name = "kicad-context-mcp"
version = "0.1.0"
description = "Read-only MCP server that helps AI agents understand KiCad projects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["mcp>=1.2.0"]

[project.scripts]
kicad-context-mcp = "kicad_context_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_context_mcp"]
